# gepa-adk

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCS.md  LICENSE  NOTICE  README.md  SANDWICH_EXAMPLE.md  SECURITY.md  WORKFLOW_AGENT_DESIGN_QUESTIONS.md  mkdocs.yml  pyproject.toml  release-please-config.json
.claude/commands/: gh.issue.implement.md  pr.create.md  speckit.analyze.md  speckit.implement.md  speckit.plan.md  speckit.tasks.md
.claude/rules/: dev-quality-checklist.md  pr-review-comments.md  pull-requests.md  pytest.md  python.md  sonarqube.md  testing.md
.cursor/: worktrees.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-tech-debt.yml  03-feature-idea.yml  04-feature-request.yml  05-story.md  06-retro-action.md  07-tea-audit.yml  08-tea-action.yml  README.md  config.yml
.github/agents/: adr-auditor.agent.md  copilot-instructions.md
.github/baselines/: .gitkeep  deprecations-baseline.txt
.github/instructions/: mermaid.instructions.md  pytest.instructions.md  python.instructions.md
.github/prompts/: adr-audit-diff.prompt.md  adr-audit-full.prompt.md  adr-create-issues.prompt.md  issue.implement.prompt.md  pr.create.prompt.md  pr.review.comments.prompt.md  pr.update.prompt.md  speckit.architecture.prompt.md
.github/workflows/: boundaries.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  dependency-health.yml  deprecation-detection.yml  docs.yml  docstring-quality.yml  publish.yml  release-please.yml  test-publish.yml  tests.yml  type-check.yml
.specify/memory/: constitution.md
.specify/templates/: architecture-template.md  plan-template.md  tasks-template.md
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1a-2-reorganize-adapters-into-sub-packages.md  1a-3-define-evolution-result-protocol.md  1b-1-architectural-boundary-enforcement-scripts.md  1b-2-adk-1-20-0-compatibility-layer.md  1b-3-clean-up-ty-type-check-diagnostics.md  1b-4-fix-pre-existing-boundary-violations.md  1b-5-eliminate-ty-type-narrowing-workarounds.md  1b-6-migrate-trunk-based-main-release-1-0-0.md  2-1-add-stop-reason-schema-version-and-stop-reason-to-results.md  2-2-result-serialization.md  2-3-evolution-result-display-enhancements.md  2-4-graceful-interrupt-with-partial-results.md  2-5-pre-flight-validation-enhancements.md  2-6-universal-sync-wrapper-and-api-surface-polish.md  2-7-seed-based-determinism.md  2-8-mutation-rationale-capture.md  2-9-credential-redaction-defaults.md  3-1-implement-critic-preset-factory.md  3-2-fill-contract-test-gaps.md  3-3-extension-point-documentation.md  6-1-regression-detection-stopper.md  epic-1a-1b-retro-2026-03-04.md  epic-1a-retro-2026-03-02.md  epic-2-retro-2026-03-06.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-01.md  prd-validation-report.md  prd.md  product-brief-gepa-adk-2026-03-01.md  ux-design-specification.md
_bmad-output/test-artifacts/: test-review.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: getting-started.md  index.md  main.py  project-management.md
docs/adr/: ADR-000-hexagonal-architecture.md  ADR-001-async-first-architecture.md  ADR-002-protocol-for-interfaces.md  ADR-005-three-layer-testing.md  ADR-006-external-library-integration.md  ADR-008-structured-logging.md  ADR-009-exception-hierarchy.md  ADR-010-docstring-quality.md  ADR-011-cross-platform-encoding.md  ADR-012-multi-agent-component-addressing.md  ADR-013-result-type-protocol.md  ADR-014-adapter-reorganization.md  ADR-015-result-schema-versioning.md  README.md  index.md
docs/concepts/: gepa-fundamentals.md  index.md  multi-agent-evolution.md  single-agent-evolution.md  workflow-agents.md
docs/contributing/: docstring-templates.md  extending-providers.md  extending-surfaces.md  extending.md  releasing.md
docs/guides/: critic-agents.md  multi-agent.md  reflection-prompts.md  single-agent.md  stoppers.md  workflows.md
docs/proposals/: 001-initial-package-proposal.md
docs/reference/: glossary.md  index.md
examples/: app_runner_integration.py  basic_evolution.py  basic_evolution_adk_reflection.py  config_evolution_demo.py  critic_agent.py  custom_reflection_prompt.py  loop_agent_evolution.py  model_evolution.py  multi_agent.py  multi_agent_component_demo.py  nested_workflow_evolution.py  parallel_agent_evolution.py  sandwich_evolution.py  schema_evolution_critic.py  schema_evolution_example.py  schema_evolution_validated.py  schema_reflection_demo.py  video_transcription_evolution.py  workflow.py
scripts/: analyze_api_markers.py  analyze_test_marks.py  analyze_test_performance.py  check_boundaries.sh  check_protocol_coverage.py  code_quality_check.sh  docstring_docs_coverage.py  docstring_enrichment.py  docstring_freshness.py  docstring_griffe_check.py  evaluate_test_marks.py  gen_ref_pages.py
specs/001-cross-platform-encoding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-output-schema-evolution/: spec.md
specs/001-train-val-split/: spec.md
specs/002-domain-models/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-mkdocs-setup/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-async-gepa-adapter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-scorer-protocol/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-async-gepa-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-async-mutation-proposer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-adk-adapter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-critic-scorer/: data-model.md  (+5 more)
tests/: conftest.py
(+664 files in other folders)
