[project]
name = "gepa-adk"
version = "0.1.0"
description = "Evolutionary optimization for Google ADK agents"
readme = "README.md"
authors = [
    { name = "Alberto-Codes", email = "alberto.codes.dev@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-adk>=1.22.0",
    "litellm>=1.80.13",
    "nest-asyncio>=1.6.0",
    "structlog>=25.5.0",
]

[project.scripts]
gepa-adk = "gepa_adk:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 88  # Formatter target
target-version = "py312"
exclude = [".uv-cache", ".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
# I = isort (import sorting), D = pydocstyle (docstrings), E501 = line length
extend-select = ["E501", "I", "D"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100  # Linter threshold (allow some flexibility)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["agent_workflow_suite"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.interrogate]
verbose = 1
fail-under = 95
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
exclude = ["tests", "scripts"]

# Ty type checker configuration
# ty is pre-release (0.0.1a33) with known limitations:
# - SQLModel/SQLAlchemy Session.exec() not fully typed (shows Unknown | Session)
# - pytest.MonkeyPatch.context() classmethod detection bug (false missing-argument errors)
# These are false positives confirmed by 700+ passing tests
[tool.ty.src]
exclude = [
    "scripts/",    # Utility scripts - not production code
]

# Override for test files - still type check but ignore pytest.MonkeyPatch.context() bug
[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
# pytest.MonkeyPatch.context() is a classmethod but ty thinks it needs `cls` argument
# This is a ty bug with pytest type stubs - all 88 errors are this same false positive
missing-argument = "ignore"

[tool.hatch.envs.default.scripts]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ty>=0.0.1a20",
    "ruff>=0.13.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.1.1",
    "pytest-cov>=7.0.0",
    "arize-phoenix-client",
    "pytest-timeout>=2.4.0",
    "pytest-profiling>=1.8.1",
    "pytest-mock>=3.15.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-section-index>=0.3.9",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-macros-plugin>=1.3.7",
    "pillow>=11.0.0",
    "cairosvg>=2.7.1",
    "interrogate>=1.7.0",
    "griffe-warnings-deprecated>=1.1.0",
    "griffe-inherited-docstrings>=1.1.2",
    "gepa>=0.0.24",
    # Pin requests to avoid buggy 2.32.5 version (missing JSONDecodeError/Mapping in compat.py)
    # See: https://github.com/psf/requests/issues/issues
    "requests>=2.32.0,!=2.32.5",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests - fast, isolated",
    "contract: Contract tests verifying interface compliance",
    "integration: Integration tests with real databases",
    "slow: Slow-running tests (execution, API calls)",
    "api: Tests that make real API calls to external services (Gemini, Ollama, etc.) - excluded by default",
    "requires_ollama: Tests requiring local Ollama service",
    "requires_gemini: Tests requiring Gemini API (video, native planning)",
]
# Exclude API tests by default to avoid accidental quota usage
addopts = "-m 'not api'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Warning filters for upstream dependencies (LiteLLM, ADK, etc.)
# These use message-based patterns to avoid import errors when dependencies aren't installed.
# Class-based filters (e.g., ignore::module.WarningClass) require the module to be installed.
filterwarnings = [
    # Pydantic deprecation warnings from LiteLLM/ADK (message-based, no import needed)
    "ignore:.*PydanticDeprecatedSince20.*:DeprecationWarning",
    "ignore:.*Pydantic.*serialization.*:UserWarning",
    "ignore:.*Pydantic.*serializer.*:UserWarning",
    # More specific Pydantic serializer warnings (covers "Pydantic serializer warnings:" prefix)
    "ignore::UserWarning:pydantic.*",
    "ignore:.*Pydantic.*:UserWarning",
    # ADK experimental feature warnings (ADR-014 pattern)
    "ignore:.*adk.*\\[EXPERIMENTAL\\].*:UserWarning",
    "ignore:.*adk.*experimental.*:UserWarning",
    # Informational runtime warnings
    "ignore:.*tracemalloc.*:UserWarning",
    "ignore:enable_cleanup_closed.*:DeprecationWarning",
    # LiteLLM async cleanup warnings (known upstream issues)
    # See: https://github.com/BerriAI/litellm/issues/8831
    # See: https://github.com/BerriAI/litellm/issues/14276
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]
